hphp/hack/test/typecheck/is_expression/valid_hint_class2.php
<?hh

abstract class C<T as string> {}

function foo(mixed $x): void {
  if ($x is C<_>) {
    hh_show($x);
  }
}
